# tree-sitter-wasm

./: .gitattributes  Cargo.toml  LICENSE_MIT  README.md  build.ps1
src/: lib.rs
