[package]
name = "tree-sitter-wasm"
version = "0.1.0"
authors = ["Cherryleafroad <13651622+cherryleafroad@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/cherryleafroad/tree-sitter-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
debug = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
tree-sitter-highlight = "0.20.1"
wee_alloc = { version = "0.4.5", optional = true }
tree-sitter = "0.20.6"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
